--- a/practice.html
+++ b/practice.html
@@ -5,9 +5,10 @@
     <title>Practice</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="http://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
     <style>
         .navbar {
             margin-bottom: 0;
@@ -27,7 +28,7 @@
         }
         /* On small screens, set height to 'auto' for sidenav and grid */
 
-        @media screen and (max-width: 767px) {
+        @media screen and (max-width: 900px) {
             .sidenav {
                 height: auto;
                 padding: 15px;
@@ -42,6 +43,77 @@
             margin-right: 80px;
         }
 
+        body {
+            font-family: Open Sans;
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        #title {
+            text-decoration: underline;
+        }
+
+        #quiz {
+            text-indent: 10px;
+            display: none;
+        }
+
+        .button {
+            border: 4px solid;
+            border-radius: 5px;
+            width: 60px;
+            padding-left: 5px;
+            padding-right: 5px;
+            position: relative;
+            float: right;
+            background-color: #DCDCDC;
+            color: black;
+            margin: 0 2px 0 2px;
+        }
+
+        .button.active {
+            background-color: #F8F8FF;
+            color: #525252;
+        }
+
+        button {
+            position: relative;
+            float: right;
+        }
+
+        .button a {
+            text-decoration: none;
+            color: black;
+        }
+
+        #container {
+            width: 70%;
+            margin: auto;
+            padding: 0 25px 40px 10px;
+            background-color: #9EB9D4;
+            border: 4px solid #B0E0E6;
+            border-radius: 5px;
+            color: #FFFFFF;
+            font-weight: bold;
+            box-shadow: 5px 5px 5px #888;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        #prev {
+            display: none;
+        }
+
+        #start {
+            display: none;
+            width: 90px;
+        }
     </style>
 </head>
 
@@ -72,125 +144,215 @@
 
     <div class="multiple-choices">
         <h1>Welcome</h1>
-        <p>Before learning how to drive in real life, you have to learn those traffic regulations to pass the exam!</p>
+        <p style="text-align:center">Before learning how to drive in real life, you have to learn those traffic regulations to pass the exam!</p>
         <hr>
-        <h3>Test</h3>
-        <p>1. A diamond shaped sign means</p>
-        <div class="checkbox">
-            <label><input type="checkbox">A.warning</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">B.stop</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox" >C.yield right of way</label>
-        </div>
-        <p>2. An upside-down triangle means</p>
-        <div class="checkbox">
-            <label><input type="checkbox">A.warning</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">B.stop</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">C.yield right of way</label>
-        </div>
-        <p>3. An octagon shaped sign means</p>
-        <div class="checkbox">
-            <label><input type="checkbox">A.warning</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">B.stop</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">C.yield right of way</label>
-        </div>
-        <p>4. When you come to a STOP sign, you should</p>
-        <div class="checkbox">
-            <label><input type="checkbox">A.be prepared to stop if there is an approaching car.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">B.make a complete stop and proceed when safe.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">C.slow down and proceed when safe.</label>
-        </div>
-        <p>5. What should you do when you come to a STOP sign at an intersection?</P>
-        <div class="checkbox">
-            <label><input type="checkbox">A.Slow down and proceed when caution.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">B.Stop only if there are any vehicles approaching the intersection.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">C.Slow down, sound horn, and proceed.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">D.Make a full stop and proceed when safe.</label>
-        </div>
-        <p>6. The hand signal for a right turn is </p>
-        <div class="checkbox">
-            <label><input type="checkbox">A.Point the arm and hand down.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">B.Hold the arm and hand up.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">C.Put the arm straight out.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">D.Make a circular motion the arm.</label>
-        </div>
-        <p>7. The hand signal for left turn is</p>
-        <div class="checkbox">
-            <label><input type="checkbox">A.pointing the arm and hand down.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">B. holding the arm and hand up.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">C.pointing the arm and hand straight out.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">D.making circular motion with the arm.</label>
-        </div>
-        <p>8. When you are stopping or slowing down you should signal by</p>
-        <div class="checkbox">
-            <label><input type="checkbox">A.pointing arm and hand down.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">B. putting the arm and hand straight up.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">C.putting the arm straight out.</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">D.making a circular motion with arm.</label>
-        </div>
-        <p>9. When the arm is extended outward, it means</p>
-        <div class="checkbox">
-            <label><input type="checkbox">A.left turn</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">B. slow or stop</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">C.right turn</label>
-        </div>
-        <p>10. When the arm and hand is pointing downward, it means</p>
-        <div class="checkbox">
-            <label><input type="checkbox">A.left turn</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">B.slow or stop</label>
-        </div>
-        <div class="checkbox">
-            <label><input type="checkbox">C.right turn</label>
+        <div id='container'>
+            <div id='title'>
+                <h1>Let's practice your traffic regulation knowledge!</h1>
+            </div>
+            <br/>
+            <div id='quiz'></div>
+            <div class='button' id='next'><a href='#'>Next</a></div>
+            <div class='button' id='prev'><a href='#'>Prev</a></div>
+            <div class='button' id='start'> <a href='#'>Start Over</a></div>
+            <!-- <button class='' id='next'>Next</a></button>
+            		<button class='' id='prev'>Prev</a></button>
+            		<button class='' id='start'> Start Over</a></button> -->
         </div>
 
+        <script>
+            (function() {
+                var questions = [{
+                    question: "1. A diamond shaped sign means?",
+                    choices: ["A.warning", "B.stop", "C.yield right of way"],
+                    correctAnswer: 0
+                }, {
+                    question: "2. An upside-down triangle means?",
+                    choices: ["A.warning", "B.stop", "C.yield right of way"],
+                    correctAnswer: 2
+                }, {
+                    question: "3. An octagon shaped sign means?",
+                    choices: ["A.warning", "B.stop", "C.yield right of way"],
+                    correctAnswer: 1
+                }, {
+                    question: "4. When you come to a STOP sign, you should",
+                    choices: ["A. be prepared to stop if there is an approaching car.", "B.make a complete stop and proceed when safe.", "C.slow down and proceed when safe."],
+                    correctAnswer: 1
+                }, {
+                    question: "5. What should you do when you come to a STOP sign at an intersection?",
+                    choices: ["A.Slow down and proceed with caution.", "B.Stop only if there are any vehicles approaching the intersection. ", "C.Slow down, sound horn, and proceed.", "D.Make a full stop and proceed when safe."],
+                    correctAnswer: 3
+                },{
+                  question: "6. The hand signal for a right turn is:",
+                  choices: ["A.Pointing the arm and hand down.", "B.Holding the arm and hand up. ", "C.Slow down, sound horn, and proceed.", "D.Make a full stop and proceed when safe."],
+                  correctAnswer: 3
+                },{
+                  question: "7. The hand signal for a left turn is:",
+                  choices: ["A.Pointing the arm and hand down.", "B.Holding the arm and hand up. ", "C.Pointing the arm and hand straight out.", "D.Making circular motion with the arm."],
+                  correctAnswer: 2
+                },{
+                  question: "8. When you are stopping or slowing down you should signal by",
+                  choices: ["A.Pointing the arm and hand down.", "B.Putting the arm and hand straight up.", "C.putting the arm straight out.", "D.making a circular motion with arm."],
+                  correctAnswer: 0
+                },{
+                  question: "9. When the arm is extended outward, it means",
+                  choices: ["A.left turn", "B. slow or stop ", "C. right turn"],
+                  correctAnswer: 0
+                },{
+                  question: "10. When the arm and hand is pointing downward, it means",
+                  choices: ["A.slow or stop", "B.left turn", "C.right turn"],
+                  correctAnswer: 0
+                }
+              ];
 
+                var questionCounter = 0; //Tracks question number
+                var selections = []; //Array containing user choices
+                var quiz = $('#quiz'); //Quiz div object
 
-        <button type="button" class="btn btn-primary">Submit</button>
-  </div>
+                // Display initial question
+                displayNext();
+
+                // Click handler for the 'next' button
+                $('#next').on('click', function(e) {
+                    e.preventDefault();
+
+                    // Suspend click listener during fade animation
+                    if (quiz.is(':animated')) {
+                        return false;
+                    }
+                    choose();
+
+                    // If no user selection, progress is stopped
+                    if (isNaN(selections[questionCounter])) {
+                        alert('Please make a selection!');
+                    } else {
+                        questionCounter++;
+                        displayNext();
+                    }
+                });
+
+                // Click handler for the 'prev' button
+                $('#prev').on('click', function(e) {
+                    e.preventDefault();
+
+                    if (quiz.is(':animated')) {
+                        return false;
+                    }
+                    choose();
+                    questionCounter--;
+                    displayNext();
+                });
+
+                // Click handler for the 'Start Over' button
+                $('#start').on('click', function(e) {
+                    e.preventDefault();
+
+                    if (quiz.is(':animated')) {
+                        return false;
+                    }
+                    questionCounter = 0;
+                    selections = [];
+                    displayNext();
+                    $('#start').hide();
+                });
+
+                // Animates buttons on hover
+                $('.button').on('mouseenter', function() {
+                    $(this).addClass('active');
+                });
+                $('.button').on('mouseleave', function() {
+                    $(this).removeClass('active');
+                });
+
+                // Creates and returns the div that contains the questions and
+                // the answer selections
+                function createQuestionElement(index) {
+                    var qElement = $('<div>', {
+                        id: 'question'
+                    });
+
+                    var header = $('<h2>Question ' + (index + 1) + ':</h2>');
+                    qElement.append(header);
+
+                    var question = $('<p>').append(questions[index].question);
+                    qElement.append(question);
+
+                    var radioButtons = createRadios(index);
+                    qElement.append(radioButtons);
+
+                    return qElement;
+                }
+
+                // Creates a list of the answer choices as radio inputs
+                function createRadios(index) {
+                    var radioList = $('<ul>');
+                    var item;
+                    var input = '';
+                    for (var i = 0; i < questions[index].choices.length; i++) {
+                        item = $('<li>');
+                        input = '<input type="radio" name="answer" value=' + i + ' />';
+                        input += questions[index].choices[i];
+                        item.append(input);
+                        radioList.append(item);
+                    }
+                    return radioList;
+                }
+
+                // Reads the user selection and pushes the value to an array
+                function choose() {
+                    selections[questionCounter] = +$('input[name="answer"]:checked').val();
+                }
+
+                // Displays next requested element
+                function displayNext() {
+                    quiz.fadeOut(function() {
+                        $('#question').remove();
+
+                        if (questionCounter < questions.length) {
+                            var nextQuestion = createQuestionElement(questionCounter);
+                            quiz.append(nextQuestion).fadeIn();
+                            if (!(isNaN(selections[questionCounter]))) {
+                                $('input[value=' + selections[questionCounter] + ']').prop('checked', true);
+                            }
+
+                            // Controls display of 'prev' button
+                            if (questionCounter === 1) {
+                                $('#prev').show();
+                            } else if (questionCounter === 0) {
+
+                                $('#prev').hide();
+                                $('#next').show();
+                            }
+                        } else {
+                            var scoreElem = displayScore();
+                            quiz.append(scoreElem).fadeIn();
+                            $('#next').hide();
+                            $('#prev').hide();
+                            $('#start').show();
+                        }
+                    });
+                }
+
+                // Computes score and returns a paragraph element to be displayed
+                function displayScore() {
+                    var score = $('<p>', {
+                        id: 'question'
+                    });
+
+                    var numCorrect = 0;
+                    for (var i = 0; i < selections.length; i++) {
+                        if (selections[i] === questions[i].correctAnswer) {
+                            numCorrect++;
+                        }
+                    }
+
+                    score.append('You got ' + numCorrect + ' questions out of ' +
+                        questions.length + ' right!!!');
+                    return score;
+                }
+            })();
+        </script>
+
+    </div>
 
 </html>
